--- a/index.html
+++ b/index.html
@@ -520,11 +520,14 @@
     </footer>
 
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/5511956530436?text=Ol%C3%A1!%20Tenho%20interesse%20em%20um%20or%C3%A7amento%20para%20m%C3%B3veis%20planejados%20em%20Jundia%C3%AD.%20Pode%20me%20ajudar%3F"
-        class="whatsapp-float position-fixed rounded-circle d-flex align-items-center justify-content-center bg-success text-white"
-        style="width: 60px; height: 60px; bottom: 30px; right: 30px; z-index: 1000;" target="_blank">
-        <i class="fab fa-whatsapp fs-4"></i>
-    </a>
+<a href="https://wa.me/5511956530436?text=Ol%C3%A1!%20Tenho%20interesse%20em%20um%20or%C3%A7amento%20para%20m%C3%B3veis%20planejados%20em%20Jundia%C3%AD.%20Pode%20me%20ajudar%3F"
+   class="whatsapp-float"
+   target="_blank"
+   aria-label="Fale conosco pelo WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+    <span class="whatsapp-badge">1</span>
+</a>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
