Atualização de layd

--- a/index.html
+++ b/index.html
@@ -63,25 +63,22 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center text-white">
                     <h1 class="display-4 fw-bold mb-4">Bartzen | Móveis Planejados – Jundiaí</h1>
-                    <p class="lead mb-5">Design personalizado, qualidade e tradição local <br />
+                    <p class="lead mb-5">Melhor que meu preço, só meu produto <br />
                     <p>
+                         <div class="mb-4">
+                    <a href="#contato" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
+                    </a>
+                </div>
                     <div class="social-hero">
                         <a href="https://www.instagram.com/moveistop/" target="_blank" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.facebook.com/bartzenjundiai" target="_blank" aria-label="Facebook">
+                        <a href="https://www.facebook.com/profile.php?id=100063738605552" target="_blank" aria-label="Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                     </div>
                     </p>
                     </p>
-                    <div class="slogan-box bg-dark bg-opacity-50 p-4 rounded d-inline-block mb-4">
-                        <p class="slogan fs-4 mb-2">"Melhor que meu preço, só meu produto"</p>
-                        <div class="benefit-badge bg-opacity-20 p-2 rounded-pill d-inline-flex align-items-center">
-                            <i class="fas fa-trophy text-warning me-2"></i>
-                            <span>Melhor custo-benefício de Jundiaí</span>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -134,7 +131,7 @@
                 <!-- Informações do Vendedor -->
                 <div class="seller-info-card">
                     <div class="seller-profile">
-                        <img src="./img/fotoperfil.jpg" alt="Marcos Silva - Especialista Bartzen" class="seller-photo">
+                        <img src="./img/fotoperfil.jpg" alt="Vini Macedo - Especialista Bartzen" class="seller-photo">
                         <div class="seller-badges">
                             <span class="badge-experience">
                                 <i class="fas fa-award"></i> 15+ anos
@@ -145,7 +142,7 @@
                         </div>
                     </div>
 
-                    <h3 class="seller-name">Marcos Silva <span>Especialista em Móveis Planejados</span></h3>
+                    <h3 class="seller-name">Vini Macedo <span>Especialista em Móveis Planejados</span></h3>
 
                     <ul class="seller-expertise">
                         <li>
@@ -577,7 +574,7 @@
                         <a href="https://www.instagram.com/bartzenjundiai"
                             class="text-white text-decoration-none d-flex align-items-center justify-content-center rounded-circle bg-secondary"
                             style="width: 40px; height: 40px;" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/bartzenjundiai"
+                        <a href="https://www.facebook.com/profile.php?id=100063738605552"
                             class="text-white text-decoration-none d-flex align-items-center justify-content-center rounded-circle bg-secondary"
                             style="width: 40px; height: 40px;" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
