--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/logo.png" type="image/png">
-    <title>Móveis Planejados em Jundiaí | Bartzen</title>
+    <title>Móveis Planejados em Campinas | Bartzen</title>
     <meta name="description"
-        content="Móveis sob medida em Jundiaí com design moderno, entrega garantida e atendimento 5 estrelas. Solicite orçamento via WhatsApp.">
+        content="Móveis sob medida em Campinas com design moderno, entrega garantida e atendimento 5 estrelas. Solicite orçamento via WhatsApp.">
     <meta name="robots" content="index, follow">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -62,7 +61,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center text-white">
-                    <h1 class="display-4 fw-bold mb-4">Bartzen | Móveis Planejados – Jundiaí</h1>
+                    <h1 class="display-4 fw-bold mb-4">Bartzen | Móveis Planejados – Campinas</h1>
                     <p class="lead mb-5">Melhor que meu preço, só meu produto <br />
                     <p>
                          <div class="mb-4">
@@ -155,7 +154,7 @@
                         </li>
                         <li>
                             <i class="fas fa-check-circle"></i>
-                            <strong>Local:</strong> Jundiaí e região há 10 anos
+                            <strong>Local:</strong> Campinas e região há 10 anos
                         </li>
                     </ul>
 
@@ -175,10 +174,10 @@
     <!-- Sobre Section -->
     <section id="sobre" class="py-5 bg-light">
         <div class="container py-5">
-            <h2 class="text-center mb-5">Sobre a Bartzen Jundiaí</h2>
+            <h2 class="text-center mb-5">Sobre a Bartzen Campinas</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <p class="fs-5 mb-4">Com <strong>30 anos de tradição</strong> em Jundiaí e região, a Bartzen faz
+                    <p class="fs-5 mb-4">Com <strong>30 anos de tradição</strong> em Campinas e região, a Bartzen faz
                         parte do <strong>Grupo K1</strong> e se destaca por criar móveis sob medida com design
                         personalizado que transformam ambientes.</p>
 
@@ -340,7 +339,7 @@
 
                 <ul class="advantage-list list-unstyled">
                     <li class="mb-2"><i class="fas fa-check-circle  me-2"></i> <strong>Melhor
-                            custo-benefício</strong> em Jundiaí e região</li>
+                            custo-benefício</strong> em Campinas e região</li>
                     <li class="mb-2"><i class="fas fa-check-circle  me-2"></i> <strong>Preço justo</strong>
                         com qualidade premium</li>
                     <li class="mb-2"><i class="fas fa-check-circle  me-2"></i> <strong>"Melhor que meu
@@ -371,7 +370,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <p class="mb-0">- Carlos Silva, Jundiaí</p>
+                            <p class="mb-0">- Carlos Silva, Campinas</p>
                         </div>
                     </div>
                 </div>
@@ -536,7 +535,7 @@
     <section class="location-section py-5 bg-light">
         <div class="container py-5">
             <h2 class="text-center mb-3">Nossa Localização</h2>
-            <p class="text-center text-muted mb-5">Venha conhecer nosso showroom em Jundiaí ou agende uma visita
+            <p class="text-center text-muted mb-5">Venha conhecer nosso showroom em Campinas ou agende uma visita
                 técnica!</p>
 
             <div class="row">
@@ -567,7 +566,7 @@
         <div class="container py-4">
             <div class="row g-4">
                 <div class="col-lg-4">
-                    <h3 class="h5 mb-4">Bartzen Jundiaí</h3>
+                    <h3 class="h5 mb-4">Bartzen Campinas</h3>
                     <p class="text-white-50">Móveis planejados sob medida com design personalizado e qualidade
                         incomparável.</p>
                     <div class="social-links d-flex gap-3 mt-4">
@@ -585,7 +584,7 @@
                     <p class="text-white-50 mb-2"><i class="fas fa-phone-alt  me-2"></i> (11) 99706-1881</p>
                     <p class="text-white-50 mb-2"><i class="fas fa-envelope  me-2"></i>
                         Macedoprojetos@gmail.com</p>
-                    <p class="text-white-50 mb-0"><i class="fas fa-map-marker-alt  me-2"></i> Jundiaí - SP
+                    <p class="text-white-50 mb-0"><i class="fas fa-map-marker-alt  me-2"></i> Campinas - SP
                     </p>
                 </div>
 
@@ -605,7 +604,7 @@
             </div>
 
             <div class="footer-bottom border-top border-secondary mt-5 pt-4 text-center text-white-50">
-                <p class="mb-1">&copy; 2023 Bartzen Jundiaí. Todos os direitos reservados.</p>
+                <p class="mb-1">&copy; 2023 Bartzen Campinas. Todos os direitos reservados.</p>
                 <p class="mb-0">Parte do Grupo K1</p>
             </div>
         </div>
