adicinar google ads

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,16 @@
         rel="stylesheet">
     <!-- CSS Personalizado -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17259800445"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17259800445');
+    </script>
+
 </head>
 
 <body>
@@ -64,10 +75,10 @@
                     <h1 class="display-4 fw-bold mb-4">Bartzen | Móveis Planejados – Campinas</h1>
                     <p class="lead mb-5">Melhor que meu preço, só meu produto <br />
                     <p>
-                         <div class="mb-4">
-                    <a href="#contato" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
-                    </a>
-                </div>
+                    <div class="mb-4">
+                        <a href="#contato" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
+                        </a>
+                    </div>
                     <div class="social-hero">
                         <a href="https://www.instagram.com/moveistop/" target="_blank" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
