Adicinado novo google ads

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         gtag('js', new Date());
 
         gtag('config', 'AW-17298621223');
+
+
     </script>
     </script>
 
@@ -35,6 +37,15 @@
 <body>
     <!-- Header -->
     <header class="header fixed-top">
+        <!-- Event snippet for Enviar formulário de lead (4) conversion page -->
+        <script>
+            gtag('event', 'conversion', {
+                'send_to': 'AW-17298621223/_bd2CJ2PsOgaEKeG0LhA',
+                'value': 1.0,
+                'currency': 'BRL'
+            });
+        </script>
+
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
