Política de Cookies/Privacidade (LGPD/RGPD)s

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="seller-cta">
                         <p>Meu compromisso é entender suas necessidades e entregar <strong>Melhor que meu preço, só meu
                                 produto</strong></p>
-                        <a href="https://wa.me/5511997061881?text=Olá%20Marcos,%20vi%20seu%20vídeo%20e%20quero%20conversar%20sobre%20um%20projeto"
+                        <a href="https://wa.me/5511997061881?text=Ol%C3%A1%2C%20Vini%21%20Quero%20receber%20um%20or%C3%A7amento%20para%20regi%C3%A3o%20de%20Campinas%2C%20como%20funciona%3F"
                             class="btn whatsapp-btn">
                             <i class="fab fa-whatsapp"></i> Chamar no WhatsApp
                         </a>
@@ -633,8 +633,38 @@
         </div>
     </footer>
 
+    <!-- Cookie Consent Banner -->
+<div class="cookie-consent" id="cookieConsent">
+    <div class="cookie-consent-container">
+        <div class="cookie-consent-text">
+            <p>Valorizamos sua privacidade</p>
+            <p>Utilizamos cookies para aprimorar sua experiência de navegação, exibir anúncios ou conteúdo personalizado e analisar nosso tráfego. Ao clicar em "Aceitar todos", você concorda com nosso uso de cookies.</p>
+        </div>
+        <div class="cookie-consent-buttons">
+            <button class="cookie-btn btn-customize" id="btnCustomize">Personalizar</button>
+            <button class="cookie-btn btn-reject" id="btnReject">Rejeitar</button>
+            <button class="cookie-btn btn-accept" id="btnAccept">Aceitar tudo</button>
+        </div>
+        <div class="cookie-customization" id="cookieCustomization">
+            <div class="cookie-option">
+                <input type="checkbox" id="essentialCookies" checked disabled>
+                <label for="essentialCookies">Cookies Essenciais (obrigatórios)</label>
+            </div>
+            <div class="cookie-option">
+                <input type="checkbox" id="analyticsCookies">
+                <label for="analyticsCookies">Cookies de Análise</label>
+            </div>
+            <div class="cookie-option">
+                <input type="checkbox" id="marketingCookies">
+                <label for="marketingCookies">Cookies de Marketing</label>
+            </div>
+            <button class="cookie-btn btn-accept" id="btnSavePreferences">Salvar Preferências</button>
+        </div>
+    </div>
+</div>
+
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/5511997061881?text=Ol%C3%A1!%20Tenho%20interesse%20em%20um%20or%C3%A7amento%20para%20m%C3%B3veis%20planejados%20em%20Jundia%C3%AD.%20Pode%20me%20ajudar%3F"
+    <a href="https://wa.me/5511997061881?text=Ol%C3%A1%2C%20Vini%21%20Quero%20receber%20um%20or%C3%A7amento%20para%20regi%C3%A3o%20de%20Campinas%2C%20como%20funciona%3F"
         class="whatsapp-float" target="_blank" aria-label="Fale conosco pelo WhatsApp">
         <i class="fab fa-whatsapp"></i>
         <span class="whatsapp-badge">1</span>
