Atualização de link

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="seller-cta">
                         <p>Meu compromisso é entender suas necessidades e entregar <strong>Melhor que meu preço, só meu
                                 produto</strong></p>
-                        <a href="https://wa.me/5511997061881?text=Ol%C3%A1%2C%20Vini%21%20Quero%20receber%20um%20or%C3%A7amento%20para%20regi%C3%A3o%20de%20Campinas%2C%20como%20funciona%3F"
+                        <a href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0"
                             class="btn whatsapp-btn">
                             <i class="fab fa-whatsapp"></i> Chamar no WhatsApp
                         </a>
@@ -227,7 +227,7 @@
                         <div class="col-md-6">
                             <div class="destaque-item bg-white p-3 rounded shadow-sm h-100">
                                 <i class="fas fa-check-circle  fs-4 mb-3"></i>
-                                <p>No Reclame Aqui: 7 reclamações registradas, <strong>100% atendidas</strong></p>
+                                <p>No Reclame Aqui: 2 reclamações registradas, <strong>100% atendidas</strong></p>
                             </div>
                         </div>
                     </div>
@@ -664,7 +664,7 @@
 </div>
 
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/5511997061881?text=Ol%C3%A1%2C%20Vini%21%20Quero%20receber%20um%20or%C3%A7amento%20para%20regi%C3%A3o%20de%20Campinas%2C%20como%20funciona%3F"
+    <a href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0"
         class="whatsapp-float" target="_blank" aria-label="Fale conosco pelo WhatsApp">
         <i class="fab fa-whatsapp"></i>
         <span class="whatsapp-badge">1</span>
