Atualização do google ads

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <div class="col-md-6">
                             <div class="destaque-item bg-white p-3 rounded shadow-sm h-100">
                                 <i class="fas fa-check-circle  fs-4 mb-3"></i>
-                                <p>No Reclame Aqui: 2 reclamações registradas, <strong>100% atendidas</strong></p>
+                                <p>No Reclame Aqui: 2 reclamações registradas, <strong>99% atendidas</strong></p>
                             </div>
                         </div>
                     </div>
@@ -358,9 +358,8 @@
 
             <div class="concorrente-box bg-white p-4 rounded shadow-sm mt-5 border-start border-4 border-primary">
                 <h3 class=" mb-3">Nossa vantagem competitiva</h3>
-                <p>Enquanto concorrentes como <strong>Móveis Top</strong> oferecem soluções industrializadas, a Bartzen
-                    mantém:</p>
-
+                <!-- <p>Enquanto concorrentes como <strong>Móveis Top</strong> oferecem soluções industrializadas, a Bartzen
+                    mantém:</p> -->
                 <ul class="advantage-list list-unstyled">
                     <li class="mb-2"><i class="fas fa-check-circle  me-2"></i> <strong>Melhor
                             custo-benefício</strong> em Campinas e região</li>
@@ -457,7 +456,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="stat-item">
-                        <div class="stat-number  fw-bold display-4">100%</div>
+                        <div class="stat-number  fw-bold display-4">99%</div>
                         <div class="stat-label text-muted">Casos resolvidos</div>
                     </div>
                 </div>
@@ -548,6 +547,10 @@
                             <button type="submit" class="btn btn-success w-100 py-3">
                                 <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
                             </button>
+                            <p style="font-size: 12px;">
+  Ao enviar este formulário, você concorda com nossa <a href="/politica-de-privacidade.html" target="_blank">Política de Privacidade</a>.
+</p>
+
                         </form>
                     </div>
                 </div>
