Atualização para google ads

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <div class="col-md-6">
                             <div class="destaque-item bg-white p-3 rounded shadow-sm h-100">
                                 <i class="fab fa-google  fs-4 mb-3"></i>
-                                <p>Bem avaliada no Google por qualidade e pós-venda</p>
+                                <p>Bem avaliada por qualidade e pós-venda</p>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -422,8 +422,6 @@
                 <div class="col-md-12 col-lg-4">
                     <div class="depoimento-item bg-white p-4 rounded shadow-sm h-100 border">
                         <div class="depoimento-text mb-4">
-                            <img src="./img/googlelogo_color_272x92dp.png" alt="Google" class="google-logo mb-3"
-                                style="height: 24px;">
                             <p>"Loja mais bem avaliada da rede, unidades Campinas Atibaia. Profissionais competentes e
                                 projeto impecável."</p>
                         </div>
