alteração de nome

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center text-white">
-                    <h1 class="display-4 fw-bold mb-4">Bartzen | Móveis Planejados – Campinas</h1>
-                    <p class="lead mb-5">Melhor que meu preço, só meu produto <br />
+                    <h1 class="display-4 fw-bold mb-4"> Móveis Planejados – Campinas</h1>
                     <p>
                     <div class="mb-4">
                         <a href="#contato" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
@@ -198,11 +197,10 @@
     <!-- Sobre Section -->
     <section id="sobre" class="py-5 bg-light">
         <div class="container py-5">
-            <h2 class="text-center mb-5">Sobre a Bartzen Campinas</h2>
+            <h2 class="text-center mb-5">Sobre a Moveis top Campinas</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <p class="fs-5 mb-4">Com <strong>30 anos de tradição</strong> em Campinas e região, a Bartzen faz
-                        parte do <strong>Grupo K1</strong> e se destaca por criar móveis sob medida com design
+                    <p class="fs-5 mb-4">Com <strong>30 anos de tradição</strong> em Campinas e região, Móveis sob medida com design
                         personalizado que transformam ambientes.</p>
 
                     <div class="row g-4">
@@ -383,7 +381,7 @@
                         <div class="depoimento-text mb-4 position-relative">
                             <i class="fas fa-quote-left  opacity-25 position-absolute top-0 start-0 fs-1"></i>
                             <p class="ps-4">Tivemos um atendimento sensacional. Desde o projeto até a montagem, tudo foi
-                                perfeito. Recomendo a Bartzen para quem busca qualidade e profissionalismo.</p>
+                                perfeito. Recomendo a Vinícius para quem busca qualidade e profissionalismo.</p>
                         </div>
                         <div class="depoimento-author">
                             <div class="stars text-warning mb-2">
@@ -590,7 +588,7 @@
         <div class="container py-4">
             <div class="row g-4">
                 <div class="col-lg-4">
-                    <h3 class="h5 mb-4">Bartzen Campinas</h3>
+                    <h3 class="h5 mb-4">Moveis top Campinas</h3>
                     <p class="text-white-50">Móveis planejados sob medida com design personalizado e qualidade
                         incomparável.</p>
                     <div class="social-links d-flex gap-3 mt-4">
@@ -628,8 +626,7 @@
             </div>
 
             <div class="footer-bottom border-top border-secondary mt-5 pt-4 text-center text-white-50">
-                <p class="mb-1">&copy; 2023 Bartzen Campinas. Todos os direitos reservados.</p>
-                <p class="mb-0">Parte do Grupo K1</p>
+                <p class="mb-1">&copy; 2023 Moveis top Campinas. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
