--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17259800445"></script>
+    <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-17259800445'); </script>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -190,7 +194,8 @@
             <h2 class="text-center mb-5">Sobre a Moveis top Campinas</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <p class="fs-5 mb-4">Com <strong>30 anos de tradição</strong> em Campinas e região, Móveis sob medida com design
+                    <p class="fs-5 mb-4">Com <strong>30 anos de tradição</strong> em Campinas e região, Móveis sob
+                        medida com design
                         personalizado que transformam ambientes.</p>
 
                     <div class="row g-4">
@@ -534,8 +539,9 @@
                                 <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
                             </button>
                             <p style="font-size: 12px;">
-  Ao enviar este formulário, você concorda com nossa <a href="/politica-de-privacidade.html" target="_blank">Política de Privacidade</a>.
-</p>
+                                Ao enviar este formulário, você concorda com nossa <a
+                                    href="/politica-de-privacidade.html" target="_blank">Política de Privacidade</a>.
+                            </p>
 
                         </form>
                     </div>
@@ -622,34 +628,36 @@
     </footer>
 
     <!-- Cookie Consent Banner -->
-<div class="cookie-consent" id="cookieConsent">
-    <div class="cookie-consent-container">
-        <div class="cookie-consent-text">
-            <p>Valorizamos sua privacidade</p>
-            <p>Utilizamos cookies para aprimorar sua experiência de navegação, exibir anúncios ou conteúdo personalizado e analisar nosso tráfego. Ao clicar em "Aceitar todos", você concorda com nosso uso de cookies.</p>
-        </div>
-        <div class="cookie-consent-buttons">
-            <button class="cookie-btn btn-customize" id="btnCustomize">Personalizar</button>
-            <button class="cookie-btn btn-reject" id="btnReject">Rejeitar</button>
-            <button class="cookie-btn btn-accept" id="btnAccept">Aceitar tudo</button>
-        </div>
-        <div class="cookie-customization" id="cookieCustomization">
-            <div class="cookie-option">
-                <input type="checkbox" id="essentialCookies" checked disabled>
-                <label for="essentialCookies">Cookies Essenciais (obrigatórios)</label>
+    <div class="cookie-consent" id="cookieConsent">
+        <div class="cookie-consent-container">
+            <div class="cookie-consent-text">
+                <p>Valorizamos sua privacidade</p>
+                <p>Utilizamos cookies para aprimorar sua experiência de navegação, exibir anúncios ou conteúdo
+                    personalizado e analisar nosso tráfego. Ao clicar em "Aceitar todos", você concorda com nosso uso de
+                    cookies.</p>
             </div>
-            <div class="cookie-option">
-                <input type="checkbox" id="analyticsCookies">
-                <label for="analyticsCookies">Cookies de Análise</label>
+            <div class="cookie-consent-buttons">
+                <button class="cookie-btn btn-customize" id="btnCustomize">Personalizar</button>
+                <button class="cookie-btn btn-reject" id="btnReject">Rejeitar</button>
+                <button class="cookie-btn btn-accept" id="btnAccept">Aceitar tudo</button>
             </div>
-            <div class="cookie-option">
-                <input type="checkbox" id="marketingCookies">
-                <label for="marketingCookies">Cookies de Marketing</label>
+            <div class="cookie-customization" id="cookieCustomization">
+                <div class="cookie-option">
+                    <input type="checkbox" id="essentialCookies" checked disabled>
+                    <label for="essentialCookies">Cookies Essenciais (obrigatórios)</label>
+                </div>
+                <div class="cookie-option">
+                    <input type="checkbox" id="analyticsCookies">
+                    <label for="analyticsCookies">Cookies de Análise</label>
+                </div>
+                <div class="cookie-option">
+                    <input type="checkbox" id="marketingCookies">
+                    <label for="marketingCookies">Cookies de Marketing</label>
+                </div>
+                <button class="cookie-btn btn-accept" id="btnSavePreferences">Salvar Preferências</button>
             </div>
-            <button class="cookie-btn btn-accept" id="btnSavePreferences">Salvar Preferências</button>
         </div>
     </div>
-</div>
 
     <!-- WhatsApp Float -->
     <a href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0"
