--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="./img/logo-bartzen.svg" alt="Bartzen Móveis Planejados" height="50">
+                        <!-- <img src="./img/logo-bartzen.svg" alt="Bartzen Móveis Planejados" height="50"> -->
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -225,9 +225,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <!-- <div class="col-lg-6">
                     <img src="./img/Sobre a Bartzen.jpg" alt="Equipe Bartzen" class="img-fluid rounded shadow">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
