Atualização para google ads

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="slogan-highlight fs-4 fw-bold ">"Melhor que meu preço, só meu produto" - Bartzen
+                <p class="slogan-highlight fs-4 fw-bold ">"Melhor que meu preço, só meu produto" - Vinícius
                 </p>
             </div>
 
