--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <script>
     </script>
     </script>
+    <script>
+        if (window.location.pathname === '/' || window.location.pathname === '/index.html') {
+            window.location.href = '/orcamento';
+        }
+    </script>
 
 </head>
 
@@ -676,6 +681,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Script Personalizado -->
     <script src="script.js"></script>
+    
 </body>
 
 </html>
