Atualização para google ads

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/logo.png" type="image/png">
-    <title>Móveis Planejados em Campinas | Bartzen</title>
+    <title>Móveis Planejados em Campinas</title>
     <meta name="description"
         content="Móveis sob medida em Campinas com design moderno, entrega garantida e atendimento 5 estrelas. Solicite orçamento via WhatsApp.">
     <meta name="robots" content="index, follow">
@@ -30,12 +30,6 @@
     <script>
     </script>
     </script>
-    <script>
-        if (window.location.pathname === '/' || window.location.pathname === '/index.html') {
-            window.location.href = '/orcamento';
-        }
-    </script>
-
 </head>
 
 <body>
