--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17361265275"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'AW-17361265275');
-    </script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NN65826H');</script>
+    <!-- End Google Tag Manager -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -33,17 +35,7 @@
 </head>
 
 <body>
-    <!-- Header -->
     <header class="header fixed-top">
-        <!-- Event snippet for Enviar formulário de lead (4) conversion page -->
-        <script>
-            gtag('event', 'conversion', {
-                'send_to': 'AW-17298621223/_bd2CJ2PsOgaEKeG0LhA',
-                'value': 1.0,
-                'currency': 'BRL'
-            });
-        </script>
-
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -87,14 +79,6 @@
                     <p>
                     <div class="mb-4">
                         <a href="#contato" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
-                        </a>
-                    </div>
-                    <div class="social-hero">
-                        <a href="https://www.instagram.com/moveistop/" target="_blank" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://www.facebook.com/moveistopjundiai/" target="_blank" aria-label="Facebook">
-                            <i class="fab fa-facebook-f"></i>
                         </a>
                     </div>
                     </p>
@@ -470,8 +454,8 @@
 
                     <div class="form-container bg-white p-4 rounded shadow text-dark text-start">
                         <h3 class="mb-4 text-center">Solicite um Orçamento Personalizado</h3>
-                        <form id="orcamentoForm">
-                            <!-- Dados Pessoais -->
+                        <!-- <form id="orcamentoForm">
+                             Dados Pessoais 
                             <div class="mb-3">
                                 <input type="text" class="form-control" id="nome" placeholder="Seu nome completo"
                                     required>
@@ -484,7 +468,7 @@
                                 <input type="email" class="form-control" id="email" placeholder="Seu e-mail (opcional)">
                             </div>
 
-                            <!-- Seleção de Ambiente -->
+                             Seleção de Ambiente 
                             <div class="mb-4">
                                 <label class="form-label">Selecione o(s) ambiente(s):</label>
                                 <div class="row g-2">
@@ -533,21 +517,16 @@
                                 </div>
                             </div>
 
-                            <!-- Detalhes Adicionais -->
+                             Detalhes Adicionais
                             <div class="mb-4">
                                 <textarea class="form-control" id="mensagem" rows="4"
                                     placeholder="Detalhes do projeto (medidas aproximadas, estilo preferido, prazo desejado)"></textarea>
-                            </div>
-
-                            <button type="submit" class="btn btn-success w-100 py-3">
-                                <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
-                            </button>
-                            <p style="font-size: 12px;">
-                                Ao enviar este formulário, você concorda com nossa <a
-                                    href="/politica-de-privacidade.html" target="_blank">Política de Privacidade</a>.
-                            </p>
-
+                            </div> -->
                         </form>
+
+                        <button type="submit" class="btn btn-success w-100 py-3">
+                            <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
+                        </button>
                     </div>
                 </div>
             </div>
@@ -591,14 +570,6 @@
                     <h3 class="h5 mb-4">Moveis top Campinas</h3>
                     <p class="text-white-50">Móveis planejados sob medida com design personalizado e qualidade
                         incomparável.</p>
-                    <div class="social-links d-flex gap-3 mt-4">
-                        <a href="https://www.instagram.com/moveistop/"
-                            class="text-white text-decoration-none d-flex align-items-center justify-content-center rounded-circle bg-secondary"
-                            style="width: 40px; height: 40px;" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/profile.php?id=100063738605552"
-                            class="text-white text-decoration-none d-flex align-items-center justify-content-center rounded-circle bg-secondary"
-                            style="width: 40px; height: 40px;" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    </div>
                 </div>
 
                 <div class="col-lg-4">
@@ -670,12 +641,18 @@
         <span class="whatsapp-badge">1</span>
     </a>
 
+    <!-- Google Tag Manager  -->
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NN65826H" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Script Personalizado -->
     <script src="script.js"></script>
-    
+
 </body>
 
 </html>
