atualização de BTN

--- a/index.html
+++ b/index.html
@@ -523,10 +523,12 @@
                                     placeholder="Detalhes do projeto (medidas aproximadas, estilo preferido, prazo desejado)"></textarea>
                             </div> -->
                         </form>
-
-                        <button type="submit" class="btn btn-success w-100 py-3">
-                            <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
-                        </button>
+                        <a
+                            href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0">
+                            <button type="submit" class="btn btn-success w-100 py-3">
+                                <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
