atualização de BTN

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h1 class="display-4 fw-bold mb-4"> Móveis Planejados – Campinas</h1>
                     <p>
                     <div class="mb-4">
-                        <a href="#contato" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
+                        <a href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0" class="btn btn-outline-light btn-lg px-5 py-3 me-3">Solicitar Orçamento</a>
                         </a>
                     </div>
                     </p>
@@ -523,8 +523,7 @@
                                     placeholder="Detalhes do projeto (medidas aproximadas, estilo preferido, prazo desejado)"></textarea>
                             </div> -->
                         </form>
-                        <a
-                            href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0">
+                        <a href="https://api.whatsapp.com/send/?phone=5511997061881&text=Ol%C3%A1,+Vini!+Quero+receber+um+or%C3%A7amento+para+regi%C3%A3o+de+Campinas,+como+funciona?&type=phone_number&app_absent=0">
                             <button type="submit" class="btn btn-success w-100 py-3">
                                 <i class="fab fa-whatsapp me-2"></i> Receber Orçamento no WhatsApp
                             </button>
